# athena-os

./: .gitignore  CACHE.md  CLAUDE.md  LICENSE.txt  README.md  STYLE.md  changelog.md  config.json  d.json  d_memory.md  d_personality.md  discourse_6_state.json  discourse_user.json  memory.md  mkdocs.yml  pyproject.toml  requirements.txt  sample_transactions.xlsx  style.html  tasks.xlsx
.v/: pyvenv.cfg
bot_archive/: bot_forecaster.json  bot_forecaster_memory.md  bot_forecaster_personality.md  d.json  d.md  d_memory.md  d_personality.md  d_todo.md  e.json  e.md  e_memory.md  e_personality.md
docs/: contributing.md  index.md
docs/getting-started/: installation.md
docs/reference/: agents.md  cli.md  core.md  currency.md  dashboard.md  metrics.md  pricingdata.md  riskfreerates.md
docs_build/: 404.html  index.html  objects.inv  sitemap.xml
docs_build/contributing/: index.html
docs_build/getting-started/installation/: index.html
docs_build/reference/agents/: index.html
docs_build/reference/cli/: index.html
docs_build/reference/core/: index.html
docs_build/reference/currency/: index.html
docs_build/reference/dashboard/: index.html
docs_build/reference/metrics/: index.html
docs_build/search/: search_index.json
src/athena/: currency.py  portfolio.py  pricingdata.py  riskfreerates.py  tasks.py
tests/: __init__.py  sample_transactions.xlsx  test_alpha_beta.py  test_chat_persistence.py  test_currency.py  test_discourse_api.py  test_discourse_state.py  test_discourse_triage.py  test_frontend_helpers.py  test_portfolio.py  test_pricingdata.py
(+64 files in other folders)
